modify office365view to be able to fetch all contacts
